Added Form Design for navigation
Updated NUnit.3.4.1
Added Application Icon - just something to start with

--- a/SytelineDevTools/FormMetaDataExtractor.UI/FormMetaDataExtractor.UI.vbproj
+++ b/SytelineDevTools/FormMetaDataExtractor.UI/FormMetaDataExtractor.UI.vbproj
@@ -97,6 +97,19 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmMain.Designer.vb">
+      <DependentUpon>frmMain.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmMain.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmOpen.Designer.vb">
+      <DependentUpon>frmOpen.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmOpen.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMenuItem.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -116,6 +129,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmOpen.resx">
+      <DependentUpon>frmOpen.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -141,6 +160,9 @@
       <Project>{a7296e8e-8079-4cb3-93b7-0c27cf23055c}</Project>
       <Name>SyteLineDevTools</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SyteLineDevTools.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
