Add Extgen code behind the form

--- a/SytelineDevTools/FormMetaDataExtractor.UI/App.config
+++ b/SytelineDevTools/FormMetaDataExtractor.UI/App.config
@@ -37,6 +37,9 @@
             <setting name="DBPassword" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DBSite" serializeAs="String">
+                <value />
+            </setting>
         </FormMetaDataExtractor.UI.My.MySettings>
     </userSettings>
 </configuration>
