--- a/SytelineDevTools/FormMetaDataExtractor.UI/FormMetaDataExtractor.UI.vbproj
+++ b/SytelineDevTools/FormMetaDataExtractor.UI/FormMetaDataExtractor.UI.vbproj
@@ -76,6 +76,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -186,7 +187,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Core\SyteLineDevTools.ico" />
+    <EmbeddedResource Include="Core\SyteLineDevTools.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
