--- a/SytelineDevTools/FormMetaDataExtractor.UI/My Project/Settings.settings
+++ b/SytelineDevTools/FormMetaDataExtractor.UI/My Project/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="DBPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DBSite" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
