Rename UI project

--- a/SytelineDevTools/FormMetaDataExtractor.UI/App.config
+++ b/SytelineDevTools/FormMetaDataExtractor.UI/App.config
@@ -2,14 +2,14 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="FormMetaDataExtractor.UI.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="SyteLineDevTools.UI.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <userSettings>
-        <FormMetaDataExtractor.UI.My.MySettings>
+        <SyteLineDevTools.UI.My.MySettings>
             <setting name="Password" serializeAs="String">
                 <value />
             </setting>
@@ -40,6 +40,6 @@
             <setting name="DBSite" serializeAs="String">
                 <value />
             </setting>
-        </FormMetaDataExtractor.UI.My.MySettings>
+        </SyteLineDevTools.UI.My.MySettings>
     </userSettings>
 </configuration>
