--- a/SytelineDevTools/SyteLineDevTools.UI/SyteLineDevTools.UI.vbproj
+++ b/SytelineDevTools/SyteLineDevTools.UI/SyteLineDevTools.UI.vbproj
@@ -106,6 +106,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmConfiguration.Designer.vb">
+      <DependentUpon>frmConfiguration.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmConfiguration.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmFormMetaDataExtractor.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -149,6 +155,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmConfiguration.resx">
+      <DependentUpon>frmConfiguration.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmFormMetaDataExtractor.resx">
       <DependentUpon>frmFormMetaDataExtractor.vb</DependentUpon>
     </EmbeddedResource>
