--- a/SytelineDevTools/SyteLineDevTools/SyteLineDevTools.vbproj
+++ b/SytelineDevTools/SyteLineDevTools/SyteLineDevTools.vbproj
@@ -56,6 +56,10 @@
     <Reference Include="MGShared">
       <HintPath>..\lib\MGShared.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
@@ -86,6 +90,9 @@
     <Compile Include="DataAccess.vb" />
     <Compile Include="ExtGenBuilder.vb" />
     <Compile Include="FormExtractor.vb" />
+    <Compile Include="IDODataScripting.vb" />
+    <Compile Include="IDOInvoke.vb" />
+    <Compile Include="IDOSettings.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -122,6 +129,10 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="IDOScripting\IDOCollections.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
